# obs-studio

./: .gitignore  CMakeLists.txt  README.md
CI/install/osx/: CMakeLists.pkgproj  package_util.py
UI/: CMakeLists.txt  api-interface.cpp  live-cast.cpp  live-cast.hpp  obs-app.cpp  sparkle-updater.mm  window-basic-auto-config-test.cpp  window-basic-filters.cpp  window-basic-main-outputs.cpp  window-basic-main-outputs.hpp  window-basic-main-profiles.cpp  window-basic-main-scene-collections.cpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings.cpp  window-basic-status-bar.cpp  xiguamei-oa.cpp  xiguamei-oa.hpp  xl-add-camera-dialog.cpp  xl-add-camera-dialog.hpp  xl-add-monitor-dialog.cpp  xl-add-monitor-dialog.hpp  xl-add-picture-dialog.cpp  xl-add-picture-dialog.hpp  xl-add-source-dialog.cpp  xl-add-source-dialog.hpp  xl-add-text-dialog.cpp  xl-add-text-dialog.hpp  xl-add-video-dialog.cpp  xl-add-video-dialog.hpp  xl-add-window-dialog.cpp  xl-add-window-dialog.hpp  xl-clickable-label.cpp  xl-clickable-label.hpp  xl-clickable-widget.cpp  xl-clickable-widget.hpp  xl-combo-box.cpp  xl-combo-box.hpp  xl-frameless-window-util-osx.mm  (+62 more)
UI/data/js/: douyu.js  huya.js  panda.js  util.js  xiongmao.js
UI/data/locale/: en-US.ini  zh-CN.ini
UI/data/themes/: Dark.qss  Default-osx.qssp  Default-win.qssp  Default.qss  xl-add-camera-dialog.qss  xl-add-monitor-dialog.qss  xl-add-picture-dialog.qss  xl-add-text-dialog.qss  xl-add-video-dialog.qss  xl-add-window-dialog.qss  xl-live-platform-item-widget.qss  xl-live-platforms-dialog.qss  xl-login-dialog.qss  xl-message-box.qss  xl-name-dialog.qss  xl-progress-dialog.qss  xl-register-dialog.qss  xl-scene-collection-popup-widget.qss  xl-source-app-item-widget.qss  xl-source-popup-widget.qss  xl-source-toolbox-item-widget.qss  xl-user-popup-widget.qss  xl-video-settings-dialog.qss  xl-web-dialog.qss
UI/forms/: OBSBasic.ui  XLAddCameraDialog.ui  XLAddMonitorDialog.ui  XLAddPictureDialog.ui  XLAddTextDialog.ui  XLAddVideoDialog.ui  XLAddWindowDialog.ui  XLAppItemWidget.ui  XLLivePlatformItemWidget.ui  XLLivePlatformsDialog.ui  XLLoginDialog.ui  XLMessageBox.ui  XLNameDialog.ui  XLProgressDialog.ui  XLRegisterDialog.ui  XLSceneCollectionPopupWidget.ui  XLSourceListItemWidget.ui  XLSourcePopupWidget.ui  XLStatusBar.ui  XLToolboxItemWidget.ui  XLUserPopupWidget.ui  XLVideoSettingsDialog.ui  XLWebDialog.ui  obs.qrc
UI/installer/: mp-installer.nsi
UI/win-update/updater/: updater.cpp
cmake/: ALL_BUILD.vcxproj.user.in
cmake/Modules/: ObsCpack.cmake
cmake/osxbundle/: Info.plist  obs.icns  obslaunch.sh
libobs/: CMakeLists.txt  obs-config.h  obs-display.c  obs-internal.h  obs-ios.m  obs-module.c  obs-module.h  obs-nix.c  obs-osx.m  obs-output.c  obs-scene.c  obs-service.c  obs-source.c  obs-video.c  obs.c  obs.h
libobs-opengl/: CMakeLists.txt  gl-osx.m  gl-stagesurf.c  gl-subsystem.h  gl-vertexbuffer.c  gl-windows.c  gl-x11.c  gl-zstencil.c
libobs-opengles/: gl-helpers.c  gl-indexbuffer.c  gl-ios.mm  gl-shader.c  gl-shaderparser.c  gl-stagesurf.c  gl-subsystem.c  gl-subsystem.h  gl-texture2d.c
libobs-opengles/ios/: CCES3Renderer.h  CCES3Renderer.m  CCESRenderer.h  EAGLView.h  EAGLView.mm  GLES3FrameBuffer.h  GLES3FrameBuffer.m  gl-ios.mm
libobs/graphics/: device-exports.h  graphics-imports.c  graphics-internal.h  graphics.c  graphics.h  quat.h  sse2neon.h  vec3.h  vec4.h
libobs/media-io/: format-conversion.c
libobs/util/: base.c  platform-ios.m  platform-osx.m  platform-windows.c
obs-lite/: Info.plist
obs-lite/Base.lproj/: Main.storyboard
obs-lite/Classes/: AppDelegate.h  AppDelegate.m  AppDelegate.mm  ViewController.h  ViewController.m  ViewController.mm  main.m
obs-lite/Classes/config/: obsconfig.h
obs-lite/Classes/libobs/: obs-config.h  obs-data.c  obs-internal.h  obs-module.c  obs-module.h  obs-osx.c  obs-osx.m  obs-scene.c  obs-source.c  obs.h
obs-lite/Classes/libobs-opengl/: gl-indexbuffer.c  gl-osx.m  gl-shader.c  gl-subsystem.c  gl-subsystem.h  gl-texture2d.c  gl-texturecube.c  gl-vertexbuffer.c  gl-zstencil.c
obs-lite/Classes/libobs/graphics/: device-exports.h  graphics-imports.c  graphics.c  graphics.h
obs-lite/Classes/libobs/util/: platform-osx.m
obs-lite/Classes/plugins/coreaudio-encoder/: encoder.cpp
obs-lite/Classes/plugins/mac-avcapture/: av-capture.mm
obs-lite/Classes/plugins/mac-capture/: mac-audio.c  mac-display-capture.m  mac-window-capture.m  plugin-main.c  window-utils.m
obs-lite/Classes/plugins/mac_avcapture/: av-capture.mm
obs-lite/Classes/plugins/mac_capture/: mac-helpers.h  mac-window-capture.m
obs-lite/Classes/plugins/obs-outputs/: flv-output.c  ftl-stream.c  obs-outputs.c  rtmp-stream.c
obs-lite/Classes/plugins/obs-x264/: obs-x264-plugin-main.c  (+1 more)
obs-lite/Classes/ui/: obs_app.cpp  obs_app.hpp
obs-lite/data/plugin_config/: README.md
obs-lite/data/scenes/: default.json
obs-lite/obs-lite.xcodeproj/: project.pbxproj
obs-mobile/proj.ios/: Info.plist
obs-mobile/proj.ios/Base.lproj/: Main.storyboard
obs-mobile/proj.ios/Classes/: AppDelegate.h  AppDelegate.m  AppDelegate.mm  ViewController.h  ViewController.m  ViewController.mm  main.m
obs-mobile/proj.ios/obs-mobile.xcodeproj/: project.pbxproj
plugins/coreaudio-encoder/: encoder.cpp
plugins/ios-avcapture/: av-capture.mm
plugins/mac-avcapture/: CMakeLists.txt
plugins/mac-capture/: audio-device-enum.c  audio-device-enum.h  mac-display-capture.m  window-utils.h  window-utils.m
plugins/obs-browser/obs-browser/: main-source.cpp
plugins/obs-ffmpeg/: CMakeLists.txt
plugins/obs-ffmpeg/ffmpeg-mux/: CMakeLists.txt
plugins/obs-outputs/: flv-output.c  ftl-stream.c  rtmp-stream.c  rtmp-stream.h
plugins/obs-transitions/: obs-transitions.c  transition-cut.c  transition-fade-to-color.c  transition-fade.c  transition-luma-wipe.c  transition-slide.c  transition-stinger.c  transition-swipe.c
plugins/obs-x264/: obs-x264-plugin-main.c  obs-x264.c
plugins/rtmp-services/: rtmp-common.c  rtmp-custom.c  rtmp-services-main.c  twitch.c
xiaomeilive_installer/win/: setup_script.iss
(+43 files in other folders)
